# philipshue-cli

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  release.yml
src/: args.rs  environment.rs  error.rs  main.rs
