[package]
name = "philipshue-cli"
version = "0.1.0"
repository = "https://github.com/adridevelopsthings/philipshue-cli"
authors = ["AdriDoesThings <contact@adridoesthings.com>"]
description = "A cli interface for the philipshue api"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
philipshue = { git = "https://github.com/adridevelopsthings/philipshue-rs", version = "0", features = ["display"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0"

[profile.release]
opt-level = 3
lto = true
